unpackaged/main/default/objects/BusinessAccount/fields/Other_Illiquid_Assets__c.field-meta.xml
<CustomField>
    <fullName>Other_Illiquid_Assets__c</fullName>
    <label>Other Illiquid Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>