unpackaged/main/default/objects/BusinessAccount/fields/Other_Investment_Experience_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Other_Investment_Experience_Explanation__c</fullName>
    <label>Other Investment Experience Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>