unpackaged/main/default/objects/BusinessAccount/fields/Other_Liquid_Assets__c.field-meta.xml
<CustomField>
    <fullName>Other_Liquid_Assets__c</fullName>
    <label>Other Liquid Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>