unpackaged/main/default/objects/BusinessAccount/fields/Other_Liquid_Assets_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Liquid_Assets_Description__c</fullName>
    <label>Other Liquid Assets Description</label>
    <type>TextArea</type>
</CustomField>