unpackaged/main/default/objects/BusinessAccount/fields/Other_Plan_Provider__c.field-meta.xml
<CustomField>
    <fullName>Other_Plan_Provider__c</fullName>
    <description>Captures the provider name when Other is selected in Current Plan Provider(s). Mirrors Lead.Other_Plan_Provider__c.</description>
    <inlineHelpText>Populate details if &#39;Other&#39; was selected in the Current Plan Provider(s) field.</inlineHelpText>
    <label>Other Plan Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>