unpackaged/main/default/objects/BusinessAccount/fields/Other_Trust_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Trust_Type__c</fullName>
    <label>Other Trust Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>