unpackaged/main/default/objects/BusinessAccount/fields/Paid_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Paid_Lead_Source__c</fullName>
    <label>Paid Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dave Ramsey</fullName>
            </value>
            <value>
                <fullName>Smart Asset</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>