unpackaged/main/default/objects/BusinessAccount/fields/Person_Account_Keep__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Keep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Person Account Keep</label>
    <type>Checkbox</type>
</CustomField>