unpackaged/main/default/objects/BusinessAccount/fields/Person_Account_Merging_Project__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Merging_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Person Account Merging Project</label>
    <type>Checkbox</type>
</CustomField>