unpackaged/main/default/objects/BusinessAccount/fields/Plan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Plan_Balance__c</fullName>
    <label>Plan Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>