unpackaged/main/default/objects/BusinessAccount/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <label>Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>