unpackaged/main/default/objects/BusinessAccount/fields/Platform_Fee__c.field-meta.xml
<CustomField>
    <fullName>Platform_Fee__c</fullName>
    <label>Platform Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8 bps</fullName>
            </value>
            <value>
                <fullName>10 bps</fullName>
            </value>
            <value>
                <fullName>12 bps</fullName>
            </value>
            <value>
                <fullName>12.5 bps</fullName>
            </value>
            <value>
                <fullName>15 bps</fullName>
            </value>
            <value>
                <fullName>17 bps</fullName>
            </value>
            <value>
                <fullName>20 bps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>