unpackaged/main/default/objects/BusinessAccount/fields/Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address__c</fullName>
    <label>Primary Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Address</fullName>
            </value>
            <value>
                <fullName>Mailing Address</fullName>
            </value>
            <value>
                <fullName>Other Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>