unpackaged/main/default/objects/BusinessAccount/fields/Private_Equity_Owned__c.field-meta.xml
<CustomField>
    <fullName>Private_Equity_Owned__c</fullName>
    <label>Private Equity Owned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>