unpackaged/main/default/objects/BusinessAccount/fields/Proof_of_Identity__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Identity__c</fullName>
    <label>Proof of Identity</label>
    <length>30</length>
    <type>Text</type>
</CustomField>