unpackaged/main/default/objects/BusinessAccount/fields/Prospect_Status__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Status__c</fullName>
    <description>Nurture funnel for a wealth prospect, replacing the Lead status funnel. Set manually. The macro lifecycle stage lives on Account.Type (Lead, Prospect, Active Client, Former Prospect, Former Client).</description>
    <inlineHelpText>Where this prospect sits in the nurture funnel. Set this to New when creating a prospect, and set Account Type to Prospect once the prospect is actively engaged.</inlineHelpText>
    <label>Prospect Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Attempted Contact</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Nurturing</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>