unpackaged/main/default/objects/BusinessAccount/fields/QCD_Client__c.field-meta.xml
<CustomField>
    <fullName>QCD_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this client does qualified charitable distributions regularly.</inlineHelpText>
    <label>QCD Client</label>
    <type>Checkbox</type>
</CustomField>