unpackaged/main/default/objects/BusinessAccount/fields/QCD_Next_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>QCD_Next_Service_Date__c</fullName>
    <label>QCD Next Service Date</label>
    <type>Date</type>
</CustomField>