unpackaged/main/default/objects/BusinessAccount/fields/QCD_Notes__c.field-meta.xml
<CustomField>
    <fullName>QCD_Notes__c</fullName>
    <label>QCD Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>