unpackaged/main/default/objects/BusinessAccount/fields/Real_Estate_Investment_Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Investment_Years_Experience__c</fullName>
    <label>Real Estate Investment Years Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>