unpackaged/main/default/objects/BusinessAccount/fields/Recurring_Trading_Client__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Trading_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Trading Client</label>
    <type>Checkbox</type>
</CustomField>