unpackaged/main/default/objects/BusinessAccount/fields/Redtail_Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Redtail_Migration_Id__c</fullName>
    <label>Redtail Migration Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>