unpackaged/main/default/objects/BusinessAccount/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <description>How the prospect was referred. Mirrors Opportunity.Referral_Source__c so attribution carries from the prospect to the deal. Replaces the FSC referral Lead record types.</description>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Diversify Advisor Referral</fullName>
            </value>
            <value>
                <fullName>Home Office Referral</fullName>
            </value>
            <value>
                <fullName>Personal Relationship</fullName>
            </value>
            <value>
                <fullName>Website Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>