unpackaged/main/default/objects/BusinessAccount/fields/Regulatory_Location__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Location__c</fullName>
    <label>Regulatory Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>