unpackaged/main/default/objects/BusinessAccount/fields/REIT_Investment_Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>REIT_Investment_Years_Experience__c</fullName>
    <label>REIT Investment Years Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>