unpackaged/main/default/objects/BusinessAccount/fields/Relationship_to_Employed_Family_Member__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Employed_Family_Member__c</fullName>
    <description>Broker Dealer Affiliation - Relationship to Employed Family Member</description>
    <label>Relationship to Employed Family Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>