unpackaged/main/default/objects/BusinessAccount/fields/Relationship_to_Firm__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Firm__c</fullName>
    <label>Relationship to Firm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RIA</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>