unpackaged/main/default/objects/BusinessAccount/fields/RMD_Client__c.field-meta.xml
<CustomField>
    <fullName>RMD_Client__c</fullName>
    <formula>OR(PersonContact.FinServ__Age__c &gt;=73, RMD_Applies_Inherited__c = TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMD Client</label>
    <type>Checkbox</type>
</CustomField>