unpackaged/main/default/objects/BusinessAccount/fields/RMD_Visibility__c.field-meta.xml
<CustomField>
    <fullName>RMD_Visibility__c</fullName>
    <formula>AND(PersonContact.FinServ__Age__c &gt;=73,CONTAINS(FAs_for_Primary_Owner__c, &#39;IRA&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMD Visibility</label>
    <type>Checkbox</type>
</CustomField>