unpackaged/main/default/objects/BusinessAccount/fields/Roth_Conversion_Client__c.field-meta.xml
<CustomField>
    <fullName>Roth_Conversion_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roth Conversion Client</label>
    <type>Checkbox</type>
</CustomField>