unpackaged/main/default/objects/BusinessAccount/fields/Roth_Conversion_Next_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Roth_Conversion_Next_Service_Date__c</fullName>
    <label>Roth Conversion Next Service Date</label>
    <type>Date</type>
</CustomField>