unpackaged/main/default/objects/BusinessAccount/fields/Roth_Conversion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Roth_Conversion_Notes__c</fullName>
    <label>Roth Conversion Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>