unpackaged/main/default/objects/BusinessAccount/fields/Signer_2__c.field-meta.xml
<CustomField>
    <fullName>Signer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signer 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Signer 2)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>