unpackaged/main/default/objects/BusinessAccount/fields/Sort_Name_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Sort_Name_Maestro__c</fullName>
    <formula>null</formula>
    <label>Sort Name</label>
    <type>Text</type>
</CustomField>