unpackaged/main/default/objects/BusinessAccount/fields/Structured_Notes__c.field-meta.xml
<CustomField>
    <fullName>Structured_Notes__c</fullName>
    <label>Structured Notes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>