unpackaged/main/default/objects/BusinessAccount/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <length>25</length>
    <type>Text</type>
</CustomField>