unpackaged/main/default/objects/BusinessAccount/fields/Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>Tax_Classification__c</fullName>
    <label>Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grantor</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
            <value>
                <fullName>Unknown at this time</fullName>
            </value>
            <value>
                <fullName>Corp (Taxed as C)</fullName>
            </value>
            <value>
                <fullName>Corp (Taxed as S)</fullName>
            </value>
            <value>
                <fullName>Corp (Taxed as Partnership)</fullName>
            </value>
            <value>
                <fullName>LLC (Taxed as C)</fullName>
            </value>
            <value>
                <fullName>LLC (Taxed as S)</fullName>
            </value>
            <value>
                <fullName>LLC (Taxed as Partnership)</fullName>
            </value>
            <value>
                <fullName>LLC (Taxed as Disregarded)</fullName>
            </value>
            <value>
                <fullName>Partnership (Taxed as C)</fullName>
            </value>
            <value>
                <fullName>Partnership (Taxed as S)</fullName>
            </value>
            <value>
                <fullName>Partnership (Taxed as Partnership)</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Unincorporated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>