unpackaged/main/default/objects/BusinessAccount/fields/Time_Horizon__c.field-meta.xml
<CustomField>
    <fullName>Time_Horizon__c</fullName>
    <label>Time Horizon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1 year</fullName>
            </value>
            <value>
                <fullName>1 to 3 years</fullName>
            </value>
            <value>
                <fullName>4 to 6 years</fullName>
            </value>
            <value>
                <fullName>7 to 8 years</fullName>
            </value>
            <value>
                <fullName>9 years or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>