unpackaged/main/default/objects/BusinessAccount/fields/Total_Long_Term_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Long_Term_Liabilities__c</fullName>
    <label>Total Long-Term Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>