unpackaged/main/default/objects/BusinessAccount/fields/Total_Long_Term_or_Illiquid_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Long_Term_or_Illiquid_Assets__c</fullName>
    <label>Total Long-Term or Illiquid Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>