unpackaged/main/default/objects/BusinessAccount/fields/Total_Value_of_Alternative_Investments__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_of_Alternative_Investments__c</fullName>
    <label>Total Value of Alternative Investments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>