unpackaged/main/default/objects/BusinessAccount/fields/Traditional_Securities_Experience__c.field-meta.xml
<CustomField>
    <fullName>Traditional_Securities_Experience__c</fullName>
    <inlineHelpText>Mutual Funds
ETFs
Individual Stocks
Bonds</inlineHelpText>
    <label>Traditional Securities Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Experience</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>