unpackaged/main/default/objects/BusinessAccount/fields/Trust_Estate_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Trust_Estate_Sub_Type__c</fullName>
    <label>Trust / Estate Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revocable Trust</fullName>
            </value>
            <value>
                <fullName>Irrevocable Trust</fullName>
            </value>
            <value>
                <fullName>Estate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>