unpackaged/main/default/objects/BusinessAccount/fields/View_State__c.field-meta.xml
<CustomField>
    <fullName>View_State__c</fullName>
    <label>View State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
                <default>true</default>
                <label>Client</label>
            </value>
            <value>
                <fullName>Diversify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>