unpackaged/main/default/objects/BusinessAccount/fields/X1031_Exchanges_Investment_Years_Exp__c.field-meta.xml
<CustomField>
    <fullName>X1031_Exchanges_Investment_Years_Exp__c</fullName>
    <label>1031 Exchanges Investment Years Exp</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>